--- a/public/about.Rmd
+++ b/public/about.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "About"
+title: "WU, Yuchong"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+***
 
 <center>
 
